--- a/css/styles.css
+++ b/css/styles.css
@@ -10,10 +10,7 @@ body{
 
 header{
 	display:none;
-}
-
-header>h1{
-	display:none;
+	visibility:hidden;
 }
 
 main{
